syntax = "proto3";

package testdata.nullable;

option go_package = "github.com/SebastienMelki/sebuf/internal/httpgen/testdata/nullable;nullable";

import "sebuf/http/annotations.proto";

// User demonstrates nullable primitive fields.
message User {
  // Required field (not nullable)
  string id = 1;

  // Optional field with nullable=true - serializes as null when unset
  optional string middle_name = 2 [(sebuf.http.nullable) = true];

  // Optional field without nullable - omitted when unset
  optional string nickname = 3;

  // Nullable integer field
  optional int32 age = 4 [(sebuf.http.nullable) = true];

  // Nullable boolean field
  optional bool is_verified = 5 [(sebuf.http.nullable) = true];
}

// GetUserRequest is the request for GetUser.
message GetUserRequest {
  string id = 1;
}

// UpdateUserRequest is the request for UpdateUser.
message UpdateUserRequest {
  string id = 1;
  User user = 2;
}

// NullableService tests nullable fields in requests and responses.
service NullableService {
  option (sebuf.http.service_config) = {
    base_path: "/api/v1"
  };

  rpc GetUser(GetUserRequest) returns (User) {
    option (sebuf.http.config) = {
      path: "/users/{id}"
      method: HTTP_METHOD_GET
    };
  }

  rpc UpdateUser(UpdateUserRequest) returns (User) {
    option (sebuf.http.config) = {
      path: "/users/{id}"
      method: HTTP_METHOD_PUT
    };
  }
}
